--- a/ Challenge Validating a linear regression.ipynb
+++ b/ Challenge Validating a linear regression.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "((174, 3), (174, 1))"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "0.889788019714"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "408.91436400444326"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "12858640.86380284"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "57.869654197261745"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "0.8892380101586287"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 424,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "((127, 3), (127, 1))"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "0.7650940720494886"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "338.2675202864556"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "1836420.8078747469"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 439,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "60.66255795802522"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "0.7623545432138921"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,78 @@
    "source": [
     "#R2 Score\n",
     "from sklearn.metrics import r2_score\n",
-    "r2_score(y2_test, y2_pred)"
+    "r2_score(y2_test, y2_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New York Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Explained Variance Score of the NY dataset is: 0.89\n",
+      "The Mean Absolute Error of the NY dataset is: 408.91\n",
+      "The Mean Squared Error of the NY dataset is: 12858640.86\n",
+      "The Median Absolute Score of the NY dataset is: 57.87\n",
+      "The R2 Score of the NY dataset is: 0.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The Explained Variance Score of the NY dataset is:\", round(explained_variance_score(y_test, y_pred, multioutput='uniform_average'), 2))\n",
+    "print(\"The Mean Absolute Error of the NY dataset is:\", round(mean_absolute_error(y_test, y_pred,  sample_weight=None, multioutput='uniform_average'), 2))\n",
+    "print(\"The Mean Squared Error of the NY dataset is:\", round(mean_squared_error(y_test, y_pred), 2))\n",
+    "print(\"The Median Absolute Score of the NY dataset is:\", round(median_absolute_error(y_test, y_pred), 2))\n",
+    "print(\"The R2 Score of the NY dataset is:\", round(r2_score(y_test, y_pred), 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Georgia Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 454,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Explained Variance Score of the GA dataset is: 0.77\n",
+      "The Mean Absolute Error of the GA dataset is: 338.27\n",
+      "The Mean Squared Error of the GA dataset is: 1836420.81\n",
+      "The Median Absolute Score of the GA dataset is: 60.66\n",
+      "The R2 Score of the GA dataset is: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The Explained Variance Score of the GA dataset is:\", round(explained_variance_score(y2_test, y2_pred, multioutput='uniform_average'), 2 ))\n",
+    "print(\"The Mean Absolute Error of the GA dataset is:\", round(mean_absolute_error(y2_test, y2_pred,  sample_weight=None, multioutput='uniform_average'), 2 ))\n",
+    "print(\"The Mean Squared Error of the GA dataset is:\", round(mean_squared_error(y2_test, y2_pred), 2 ))\n",
+    "print(\"The Median Absolute Score of the GA dataset is:\", round(median_absolute_error(y2_test, y2_pred), 2))\n",
+    "print(\"The R2 Score of the GA dataset is:\", round(r2_score(y2_test, y2_pred), 2))"
    ]
   },
   {
